# AutoNavROS2

./: .gitignore  CLAUDE.md  README.md  README.zh.md  quick_start.sh  rviz_slam_config.rviz
config/: turtlebot3_fast.yaml
configs/: robot.yaml
dashboard/: App.tsx  Dockerfile  README.md  constants.ts  docker-compose.yml  index.html  metadata.json  nginx.conf  package-lock.json  package.json  types.ts
dashboard/components/: ControlPanel.tsx  LogConsole.tsx  MapVisualizer.tsx  StatusWidget.tsx
dashboard/services/: rosSimulation.ts
data/: empty
docs/: api.md  user_guide.md
scripts/: README.md  kill_all_ros.sh  start_full_system.sh  start_rviz_slam.sh  start_slam_demo.sh  stop_full_system.sh  verify_gazebo_setup.sh
src/path_planning/: CMakeLists.txt  README.md  README.zh.md  package.xml
src/path_planning/config/: path_planning_params.yaml
src/path_planning/docs/: obstacle_detection_comparison.md  obstacle_parameters.md
src/path_planning/launch/: path_planning.launch.py
src/path_planning/scripts/: astar_planner.py  goal_pose_bridge.py  path_planning_service.py  pure_pursuit_controller.py  simple_path_publisher.py
src/slam/: CMakeLists.txt  README.md  README.zh.md  package.xml
src/slam/config/: slam_params.yaml
src/slam/launch/: slam.launch.py  slam_with_planning.launch.py
src/slam/scripts/: interactive_goal_setter.py  occupancy_grid_mapper.py  simple_odometry.py
